<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_mychats_icon"
        android:title="@string/title_chats" />

  <!--  <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_mychats_icon"
        android:title="@string/title_chats" />-->

</menu>